--- a/index.html
+++ b/index.html
@@ -1,59 +1,45 @@
 <!DOCTYPE html>
-<html >
-<head>
-  <meta charset="UTF-8">
-  <title>Richard Feynman tribute</title>
-  
-  
-  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="css/style.css">
-
-  
-</head>
-
-<body>
-  <div class = "container-fluid" id = "body">
-  <div class = "header" id="title">
-    <h1><b>Richard Feynman</b></h1>
-    <h4>The man, the myth, the legend</h2>
-    <h2>
-  </div>
-  <div class = "row">
-    <div class="col-md-6 well">
-      <img src="http://s3-us-west-1.amazonaws.com/www-prod-storage.cloud.caltech.edu/styles/article_photo/s3/feynman01-NEWS-WEB.jpeg?itok=OI7b23mU" class = "img-responsive" id ="feynman">
-    </div>
-    <div class="col md-6 well" id = "well-right">
-      <div id = "subtitle">
-        <h2>Short bio</h2></div>
-        <p>Perhaps beyond his monumentous achievement achievements within the fields of quantum mechanics and particle physics, Richard Feynman is best remembered as a natural born teacher. His distinctive New York accent and the lovable smile he carried while breaking down difficult concepts into decidedly more digestible topics are still teaching their lessons to this day.</p>
-      <div id = "subtitle">
-        <h2>Timeline</h2></div>
-      <p>
-      <ul>
-        <li>1918: Born in New York City</li>
-        <li>1932: Received BS from MIT, named Putnam fellow</li>
-        <li>1942: Receives PhD from Princeton</li>
-        <li>1942-1945: Worked on Manhattan project</li>
-        <li>1945: Taught theoretical physics at Cornell</li>
-        <li>1950: Began research at Caltech</li>
-        <li>1965: Received Nobel Prize in physics for work in Quantum Electrodynamics with Julian Schwinger and Shinichiro Tomonaga</li>
-        <li>1979: Received National Medal of Science award</li>
-        </ul>
-      </p>
-    <div class = "link" id="subtitle">
-      <a href = "https://en.wikipedia.org/wiki/Richard_Feynman"><h4>Learn more!</h3></a>
-    </div>
-    </div>
-  </div>
-    
-</div>
-<div class = "footer">
-      <p class = "footer-text">
-        Made with love by <a href = "http://www.chrispecunies.com">Chris Pecunies</a>
-  </p>
-</div>
-  
-  
-</body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <title>Blank Template for Bootstrap</title>
+        <!-- Bootstrap core CSS -->
+        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+        <!-- Custom styles for this template -->
+        <link href="style.css" rel="stylesheet">
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    </head>
+    <body>
+        <div class="row pg-empty-placeholder" id="header">
+            <h1>c h r i s &nbsp; p e c u n i e s</h1>
+        </div>
+        <div class="row" id="content">
+            <div class="col-md-6">
+                <img align="middle" src="file:///C:/Users/Chris/Documents/Programming/portfolio1/me42.jpg" width="500" class="img-responsive" id="portrait" /> 
+            </div>
+            <div class="col-md-6">
+                <h3 id="welcome">welcome to my portfolio-in-progress.</h3> 
+                <p>I'm Chris Pecunies, a sophomore at the University of Washington, currently studying Materials Science &amp; Engineering. This is the webpage wherein I will compile and document the projects that I am working on, as well as relevant information and achievements related to my work.</p>
+                <p>In addition to my studies within materials science, I am also an aspiring web designer, programmer, and audiovisual artist. Projects related to these endeavors will also be posted on his website in due time.</p>
+            </div>
+        </div>
+        <div class="row" id="footer">
+            <p id="footer-text"><a href="chrisp1877@gmail.com">contact me</a></p>
+        </div>
+        <!-- Bootstrap core JavaScript
+    ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
+    </body>
 </html>
