--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="row" id="content">
             <div class="col-md-6">
-                <img align="middle" src="file:///C:/Users/Chris/Documents/Programming/portfolio1/me42.jpg" width="500" class="img-responsive" id="portrait" /> 
+                <img align="middle" src="chrispweb/me42.jpg" width="500" class="img-responsive" id="portrait" /> 
             </div>
             <div class="col-md-6">
                 <h3 id="welcome">welcome to my portfolio-in-progress.</h3> 
