--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="row" id="footer">
-            <p id="footer-text"><a href="chrisp1877@gmail.com">contact me</a></p>
+            <p id="footer-text"><a href="mailto:chrisp1877@gmail.com">contact me</a></p>
         </div>
         <!-- Bootstrap core JavaScript
     ================================================== -->
