--- a/_pgbackup/index_1492212398.html
+++ b/_pgbackup/index_1492212398.html
@@ -25,14 +25,14 @@
             <div class="col-md-6">
                 <img align="middle" src="me42.jpg" width="500" class="img-responsive" id="portrait" /> 
             </div>
-            <div class="col-md-6" id="colright">
+            <div class="col-md-6">
                 <h3 id="welcome">welcome to my portfolio-in-progress.</h3> 
                 <p>I'm Chris Pecunies, a sophomore at the University of Washington, currently studying Materials Science &amp; Engineering. This is the webpage wherein I will compile and document the projects that I am working on, as well as relevant information and achievements related to my work.</p>
                 <p>In addition to my studies within materials science, I am also an aspiring web designer, programmer, and audiovisual artist. Projects related to these endeavors will also be posted on his website in due time.</p>
             </div>
         </div>
         <div class="row" id="footer">
-            <p id="footer-text"><a href="mailto:chrisp1877@gmail.com">contact me</a></p>
+            <p id="footer-text"><a href="chrisp1877@gmail.com">contact me</a></p>
         </div>
         <!-- Bootstrap core JavaScript
     ================================================== -->
