--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Chris Pecunies</title>
-        <link rel='shortcut icon' type='image/x-icon' href='me42.jpg' />
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>Blank Template for Bootstrap</title>
-        <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-        <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<html lang="en"> 
+    <head> 
+        <title>Chris Pecunies</title>         
+        <link rel='shortcut icon' type='image/x-icon' href='me42.jpg' /> 
+        <meta charset="utf-8"> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <meta name="description" content=""> 
+        <meta name="author" content=""> 
+        <title>Blank Template for Bootstrap</title>         
+        <!-- Bootstrap core CSS -->         
+        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"> 
+        <!-- Custom styles for this template -->         
+        <link href="style.css" rel="stylesheet"> 
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->         
         <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    </head>
-    <body>
-        <div class="row pg-empty-placeholder" id="header">
-            <h1>c h r i s &nbsp; p e c u n i e s</h1>
-        </div>
-        <div class="row" id="content">
-            <div class="col-md-6">
+    <![endif]-->         
+    </head>     
+    <body> 
+        <div class="row pg-empty-placeholder" id="header"> 
+            <h1>c h r i s &nbsp; p e c u n i e s</h1> 
+        </div>         
+        <div class="row" id="content"> 
+            <div class="col-md-6"> 
                 <img align="middle" src="me42.jpg" width="500" class="img-responsive" id="portrait" /> 
-            </div>
-            <div class="col-md-6" id="colright">
+            </div>             
+            <div class="col-md-6" id="colright"> 
                 <h3 id="welcome">welcome to my portfolio-in-progress.</h3> 
-                <p>I'm Chris Pecunies, a sophomore at the University of Washington, currently studying Materials Science &amp; Engineering. This is the webpage wherein I will compile and document the projects that I am working on, as well as relevant information and achievements related to my work.</p>
-                <p>In addition to my studies within materials science, I am also an aspiring web designer, programmer, and audiovisual artist. Projects related to these endeavors will also be posted on his website in due time.</p>
-            </div>
-        </div>
-        <div class="row" id="footer">
-            <p id="footer-text"><a href="mailto:chrisp1877@gmail.com">contact me</a></p>
-        </div>
+                <p>I'm Chris Pecunies, a sophomore at the University of Washington, currently studying Materials Science &amp; Engineering. This is the webpage wherein I will compile and document the projects that I am working on, as well as relevant information and achievements related to my work.</p> 
+                <p>In addition to my studies within materials science, I am also an aspiring web designer, programmer, and audiovisual artist. Projects related to these endeavors will also be posted on this website in due time.</p>
+            </div>             
+        </div>         
+        <div class="row" id="footer"> 
+            <p id="footer-text"><a href="mailto:chrisp1877@gmail.com">contact me</a></p> 
+        </div>         
         <!-- Bootstrap core JavaScript
-    ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-    </body>
+    ================================================== -->         
+        <!-- Placed at the end of the document so the pages load faster -->         
+        <script src="assets/js/jquery.min.js"></script>         
+        <script src="bootstrap/js/bootstrap.min.js"></script>         
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->         
+        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>         
+    </body>     
 </html>
