--- a/_pgbackup/index_1492308605.html
+++ b/_pgbackup/index_1492308605.html
@@ -20,8 +20,8 @@
     <![endif]-->         
     </head>     
     <body> 
-        <div class="row" id="header"> 
-            <h1><span class="responsive-head">c h r i s &nbsp; <br class="rwd-break" /> <span style="color:#ffffff">p e c u n i e s</span></span></h1> 
+        <div class="row pg-empty-placeholder" id="header"> 
+            <h1>c h r i s &nbsp; p e c u n i e s</h1> 
         </div>         
         <div class="row" id="content"> 
             <div class="col-md-6"> 
