--- a/_pgbackup/index_1492311401.html
+++ b/_pgbackup/index_1492311401.html
@@ -18,21 +18,20 @@
     <![endif]-->
     </head>
     <body>
-        <div class="row pg-empty-placeholder" id="header">
-            <h1>c h r i s &nbsp; p e c u n i e s</h1>
+        <div class="row">
+            <h1>Chris&nbsp;<br />Pecunies</h1>
         </div>
         <div class="row" id="content">
             <div class="col-md-6">
-                <img align="middle" src="chrispweb/me42.jpg" width="500" class="img-responsive" id="portrait" /> 
+                <img id="portrait" src="me42.jpg" width="500" class="img-responsive img-rounded" /> 
             </div>
             <div class="col-md-6">
-                <h3 id="welcome">welcome to my portfolio-in-progress.</h3> 
-                <p>I'm Chris Pecunies, a sophomore at the University of Washington, currently studying Materials Science &amp; Engineering. This is the webpage wherein I will compile and document the projects that I am working on, as well as relevant information and achievements related to my work.</p>
-                <p>In addition to my studies within materials science, I am also an aspiring web designer, programmer, and audiovisual artist. Projects related to these endeavors will also be posted on his website in due time.</p>
+                <h3>welcome to my portfolio-in-progress.</h3>
+                <p>I'm Chris Pecunies, a sophomore at the University of Washington, currently studying Materials Science &amp;amp; Engineering. This is the webpage wherein I will compile and document the projects that I am working on, as well as relevant information and achievements related to my work</p>
+                <p>In addition to my studies within materials science, I am also an aspiring web designer, programmer, and audiovisual artist. Projects related to these endeavors will also be posted on this website in due time.<br></p> 
+                <p><br></p>
             </div>
-        </div>
-        <div class="row" id="footer">
-            <p id="footer-text"><a href="mailto:chrisp1877@gmail.com">contact me</a></p>
+            <button type="button" class="btn btn-default" href="mailto:chrisp1877@gmail.com">Contact me!</button>
         </div>
         <!-- Bootstrap core JavaScript
     ================================================== -->
