--- a/_pgbackup/index_1492412854.html
+++ b/_pgbackup/index_1492412854.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Chris Pecunies</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,7 +23,7 @@
         </div>
         <div class="row" id="content">
             <div class="col-md-6">
-                <img id="portrait" src="me42.jpg" width="500" class="img-responsive img-rounded center-block" /> 
+                <img id="portrait" src="me42.jpg" width="500" class="img-responsive img-rounded" /> 
             </div>
             <div class="col-md-6">
                 <h3>welcome to my portfolio-in-progress.</h3>
