--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Blank Template for Bootstrap</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
         <!-- Custom styles for this template -->
@@ -22,15 +21,16 @@
     <body>
         <div class="row">
             <div class="col-md-6">
-                <h1>Chris&nbsp;<br />Pecunies</h1> 
+                <h1>Chris&nbsp;<br />Pecunies</h1>
             </div>
             <div class="col-md-6">
-                <a href="projects.html"><h3 id="nav">projects</h3></a> 
+                <a href="projects.html"><h3 id="nav">projects</a><br><br>
+                <a href="quotegenerator.html">quotes</a></h3>
             </div>
         </div>
         <div class="row" id="content">
             <div class="col-md-6">
-                <img id="portrait" src="me42.jpg" width="500" class="img-responsive img-rounded center-block" /> 
+                <img id="portrait" src="me42.jpg" width="500" class="img-responsive img-rounded center-block" />
             </div>
             <div class="col-md-6">
                 <h3>welcome to my portfolio-in-progress.</h3>
@@ -41,7 +41,7 @@
                     <button type="button" class="btn btn-default" href="mailto:chrisp1877@gmail.com">
                         <span class="glyphicon glyphicon-envelope"></span> Contact me!
                     </button>
-                </a>                 
+                </a>
             </div>
         </div>
         <div class="row">
