--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             </div>
             <div class="col-md-6">
                 <a href="projects.html"><h3 id="nav">projects</a><br><br>
-                <a href="quotegenerator.html">quotes</a></h3>
+                <a href="quotegenerator.html">quotes</a><br><br>
+                <a href="processing.html">processing</a></h3>
             </div>
         </div>
         <div class="row" id="content">
