--- a/processing.html
+++ b/processing.html
@@ -2,15 +2,28 @@
 
 <head>
   <meta charset="UTF-8">
-    <link href="style.css" rel="stylesheet">
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
-</head>
-<body>
-    <h3>Welcome to my Processing playground!</h1>
-    <div id ="info"></div>
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+  </head>
+
+  <body>
+    <div class="row">
+        <div class="col-md-6">
+            <h1>personal p5.js playground</h1>
+        </div>
+        <div class="col-md-6">
+            <a href="index.html"><h3 id="nav" style="opacity: 0.7">back</h3></a>
+        </div>
+    </div>
     <div id="container">
     </div>
 </body>
