--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
             <h1>projects</h1>
         </div>
         <div class="col-md-6">
-            <a href="index.html"><h3 id="nav">back</h3></a>
+            <a href="index.html"><h3 id="nav" style = "opacity:0.7">back</h3></a>
         </div>
     </div>
     <div class="row" id="content"  style="padding: 30px 20% 30px 20%">
