--- a/quotegenerator.html
+++ b/quotegenerator.html
@@ -21,10 +21,10 @@
   <body>
     <div class="row">
         <div class="col-md-6">
-            <h1>/r/Showerthoughts Quotes</h1>
+            <h1>/r/Showerthoughts Quotes</h1> <h3 style="opacity: 0.5">From last 24 hours</h3>
         </div>
         <div class="col-md-6">
-            <a href="index.html"><h3 id="nav">back</h3></a>
+            <a href="index.html"><h3 id="nav" style="opacity:0.7">back</h3></a>
         </div>
     </div>
     <div class="row" id="content"  style="padding: 30px 20% 30px 20%">
