--- a/processing.html
+++ b/processing.html
@@ -26,6 +26,9 @@
     </div>
     <div id="container">
     </div>
+    <div class="row">
+        <p id="footer-text">Chris Pecunies 2017</p>
+    </div>
 </body>
 
 </html>
