--- a/processing.html
+++ b/processing.html
@@ -13,12 +13,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <title>p5.js playground</title>
   </head>
 
   <body>
     <div class="row">
         <div class="col-md-6">
-            <h1>personal p5.js playground</h1>
+            <h1>my p5.js playground</h1>
         </div>
         <div class="col-md-6">
             <a href="index.html"><h3 id="nav" style="opacity: 0.7">back</h3></a>
