--- a/quotegenerator.html
+++ b/quotegenerator.html
@@ -22,7 +22,7 @@
   <body>
     <div class="row">
         <div class="col-md-6">
-            <h1>/r/Showerthoughts Quotes</h1> <h3 style="opacity: 0.5">From last 24 hours</h3>
+            <h1>/r/Showerthoughts Quotes</h1> <h3 style="opacity: 0.5">from last 24 hours</h3>
         </div>
         <div class="col-md-6">
             <a href="index.html"><h3 id="nav" style="opacity:0.7">back</h3></a>
