--- a/processing.html
+++ b/processing.html
@@ -6,6 +6,7 @@
   <script language="javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <script language="javascript" type="text/javascript" src="bubble.js"></script>
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
