--- a/quotegenerator.html
+++ b/quotegenerator.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div class="row" id="content"  style="padding: 30px 20% 30px 20%">
-      <div id = "quote" style="height:150px">
+      <div id = "quote">
       </div>
       <hr>
       <div class="col-sm-6" style="display: block" id="newquote">
