--- a/click/sound.html
+++ b/click/sound.html
@@ -6,7 +6,9 @@
     <script language="javascript" src="../libraries/p5.dom.js"></script>
     <script language="javascript" src="../libraries/p5.sound.js"></script>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script language="javascript" src="sound.js"></script>
+    <script language="javascript" src="sketch.js"></script>
+    <script language="javascript" src="particle.js"></script>
+    <script language="javascript" src="drag.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
