--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
     <head>
         <title>Chris Pecunies</title>
-        <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+        <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+        <script language="javascript" src="libraries/p5.dom.js"></script>
+        <script language="javascript" src="libraries/p5.sound.js"></script>
+        <script language="javascript" src="bg/bg.js"></script>
+        <script language="javascript" src="bg/particle.js"></script>
+        <script language="javascript" src="bg/mouse.js"></script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +17,7 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="row">
+        <div class="row" style="width:100%; height:100%">
             <div class="col-md-6">
                 <h1>Chris&nbsp;<br />Pecunies</h1>
             </div>
