--- a/processing.html
+++ b/processing.html
@@ -5,8 +5,8 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
-  <script language="javascript" type="text/javascript" src="bubble.js"></script>
+  <script language="javascript" type="text/javascript" src="processing/sketch.js"></script>
+  <script language="javascript" type="text/javascript" src="processing/particle.js"></script>
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
