--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
         <script language="javascript" src="libraries/p5.dom.js"></script>
         <script language="javascript" src="libraries/p5.sound.js"></script>
-        <script language="javascript" src="bg/bg.js"></script>
-        <script language="javascript" src="bg/particle.js"></script>
+        <script language="javascript" src="bg/sketch.js"></script>
+        <script language="javascript" src="bg/drop.js"></script>
         <script language="javascript" src="bg/mouse.js"></script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
