--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
     </head>
-    <body>
+    <body id = "top">
         <div class="row" style="width:100%; height:100%">
             <div class="col-md-6">
                 <h1>Chris&nbsp;<br />Pecunies</h1>
